<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".TimerFragment">

    <TextView
        android:id="@+id/textView_counterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/counter"
        android:textColor="@color/textSemiTransparent"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView_counter" />

    <TextView
        android:id="@+id/textView_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/empty_value"
        android:textColor="@color/textLight"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_counterLabel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/textView_counterLabel"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:elevation="3dp"
        android:progress="0"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/seconds_remaining"
        android:textColor="@color/textSemiTransparent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <!--Fixed size for better performance-->
    <TextView
        android:id="@+id/text_remaining_time"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/empty_value"
        android:textColor="@color/textLight"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_remaining" />

    <TextView
        android:id="@+id/label_set_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/set_time"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/label_set_reverse_timer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_remaining_time"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edit_timer"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/editTextTint"
        android:digits="0123456789"
        android:imeOptions="actionNext"
        android:inputType="number|none"
        android:maxLength="3"
        android:nextFocusLeft="@+id/edit_reverse_timer"
        android:nextFocusRight="@+id/edit_reverse_timer"
        android:nextFocusUp="@+id/edit_reverse_timer"
        android:nextFocusDown="@+id/edit_reverse_timer"
        android:nextFocusForward="@+id/edit_reverse_timer"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_set_timer"
        app:layout_constraintLeft_toRightOf="@+id/label_set_timer" />

    <TextView
        android:id="@+id/label_set_reverse_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_reverse_time"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/check_repeat"
        app:layout_constraintLeft_toLeftOf="@id/label_set_timer"
        app:layout_constraintTop_toBottomOf="@+id/label_set_timer" />

    <EditText
        android:id="@+id/edit_reverse_timer"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/editTextTint"
        android:digits="0123456789"
        android:imeOptions="actionNext"
        android:inputType="number|none"
        android:maxLength="3"
        android:nextFocusLeft="@+id/edit_repeats"
        android:nextFocusRight="@+id/edit_repeats"
        android:nextFocusUp="@+id/edit_repeats"
        android:nextFocusDown="@+id/edit_repeats"
        android:nextFocusForward="@+id/edit_repeats"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_set_reverse_timer"
        app:layout_constraintLeft_toRightOf="@id/label_set_reverse_timer"
        app:layout_constraintTop_toBottomOf="@id/edit_timer" />

    <CheckBox
        android:id="@+id/check_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/checkButtonTint"
        android:focusable="false"
        android:text="@string/repeat"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/check_vibrate"
        app:layout_constraintLeft_toLeftOf="@id/label_set_timer"
        app:layout_constraintTop_toBottomOf="@id/label_set_reverse_timer" />

    <EditText
        android:id="@+id/edit_repeats"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/editTextTint"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_repeat"
        app:layout_constraintLeft_toRightOf="@+id/check_repeat" />

    <CheckBox
        android:id="@+id/check_vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/checkButtonTint"
        android:focusable="false"
        android:text="@string/vibrationEnabled"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/check_sound"
        app:layout_constraintLeft_toLeftOf="@id/label_set_timer"
        app:layout_constraintTop_toBottomOf="@+id/check_repeat" />

    <CheckBox
        android:id="@+id/check_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/checkButtonTint"
        android:focusable="false"
        android:text="@string/sound"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintLeft_toLeftOf="@id/label_set_timer"
        app:layout_constraintTop_toBottomOf="@+id/check_vibrate" />

    <ImageView
        android:id="@+id/image_panel"
        android:layout_width="120dp"
        android:layout_height="230dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/panel"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_remaining_time" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="120dp"
        android:layout_height="230dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_remaining_time" />

    <Button
        android:id="@+id/button_start"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/custom_button_green"
        android:elevation="3dp"
        android:text="@string/start"
        android:textColor="@color/textLight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_reset" />

    <Button
        android:id="@+id/button_reset"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/custom_button_red"
        android:elevation="3dp"
        android:text="@string/reset"
        android:textColor="@color/textLight"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/button_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_start" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--139dp-->