<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".RoutineEditActivity">

    <TextView
        android:id="@+id/label_create_routine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_routine"
        android:textColor="@color/textLight"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_routine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textColor="@color/textLight"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_create_routine" />

    <EditText
        android:id="@+id/edit_routine_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/solid_panel"
        android:hint="@string/enter_routine_name"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/textDark"
        app:layout_constraintTop_toBottomOf="@id/label_routine_name" />

    <TextView
        android:id="@+id/label_routines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/exercises_colon"
        android:textColor="@color/textLight"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_routine_name" />


    <ImageView
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/solid_panel"
        app:layout_constraintTop_toBottomOf="@+id/label_routines" />


    <TextView
        android:id="@+id/text_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Shoulder press"
        android:textColor="@color/textDark"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/panel"
        app:layout_constraintTop_toTopOf="@+id/panel" />

    <TextView
        android:id="@+id/label_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="sets:"
        android:textColor="#7f3e3e3e"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_exercise_name"
        app:layout_constraintRight_toLeftOf="@+id/edit_series" />

    <EditText
        android:id="@+id/edit_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:text="4"
        android:textColor="@color/textDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_exercise_name"
        app:layout_constraintRight_toRightOf="@+id/panel" />

    <TextView
        android:id="@+id/label_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="1."
        android:textColor="@color/textDark"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/panel"
        app:layout_constraintTop_toBottomOf="@+id/text_exercise_name" />

    <TextView
        android:id="@+id/label_repeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="reps:"
        android:textColor="#7f3e3e3e"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_set"
        app:layout_constraintLeft_toRightOf="@+id/label_set" />


    <EditText
        android:id="@+id/edit_repeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@null"
        android:text="10x"
        android:textColor="@color/textDark"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_set"
        app:layout_constraintLeft_toRightOf="@id/label_repeats" />

    <ImageButton
        android:id="@+id/button_decrease_repeats"
        android:layout_width="11dp"
        android:layout_height="14dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/arrow"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@id/edit_repeats"
        app:layout_constraintLeft_toRightOf="@id/edit_repeats"
        app:layout_constraintTop_toTopOf="@id/edit_repeats" />

    <ImageButton
        android:id="@+id/button_increase_repeats"
        android:layout_width="11dp"
        android:layout_height="14dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="@id/edit_repeats"
        app:layout_constraintLeft_toRightOf="@id/button_decrease_repeats"
        app:layout_constraintTop_toTopOf="@id/edit_repeats" />

    <TextView
        android:id="@+id/label_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="weight:"
        android:textColor="#bbbbbb"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_set"
        app:layout_constraintLeft_toRightOf="@+id/button_decrease_repeats" />


    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@null"
        android:text="12.75 kg"
        android:textColor="@color/textDark"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_set"
        app:layout_constraintLeft_toRightOf="@id/label_weight" />

    <ImageButton
        android:id="@+id/button_decrease_weight"
        android:layout_width="12dp"
        android:layout_height="14dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/arrow"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@id/edit_repeats"
        app:layout_constraintLeft_toRightOf="@id/edit_weight"
        app:layout_constraintTop_toTopOf="@id/edit_repeats" />

    <ImageButton
        android:id="@+id/button_increase_weight"
        android:layout_width="12dp"
        android:layout_height="14dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="@id/edit_repeats"
        app:layout_constraintLeft_toRightOf="@id/button_decrease_weight"
        app:layout_constraintTop_toTopOf="@id/edit_repeats" />

    <TextView
        android:id="@+id/label_set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="exerciseSet 2"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/panel"
        app:layout_constraintTop_toBottomOf="@+id/label_set" />

    <TextView
        android:id="@+id/label_set3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="exerciseSet 3"
        android:textColor="#7f3e3e3e"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/panel"
        app:layout_constraintTop_toBottomOf="@+id/label_set2" />

    <TextView
        android:id="@+id/label_set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="exerciseSet 4"
        android:textColor="#cccccc"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/panel"
        app:layout_constraintTop_toBottomOf="@+id/label_set3" />


    <EditText
        android:id="@+id/edit_add_exercise"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/solid_panel"
        android:hint="Add new exercise"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/textDark"
        app:layout_constraintTop_toBottomOf="@id/panel" />


    <Button
        android:id="@+id/button_save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/custom_button_green"
        android:elevation="3dp"
        android:text="Save"
        android:textColor="@color/textLight"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_add_exercise" />


    <!--    <ImageView-->

    <!--            android:layout_width="60dp"-->
    <!--            android:layout_height="60dp"-->
    <!--            app:layout_constraintLeft_toLeftOf="@id/panel"-->
    <!--            app:layout_constraintTop_toTopOf="@id/panel"-->
    <!--            android:background="@drawable/triangle"-->

    <!--            android:layout_marginTop="90dp"-->
    <!--            android:layout_marginStart="100dp"-->

    <!--        />-->


</androidx.constraintlayout.widget.ConstraintLayout>